raw-manifests/local-staging/argo-workflows/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-workflows-vs
  namespace: istio-system
spec:
  hosts:
    - "argo-workflows.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: argo-workflows-staging-server.argo-workflows.svc.cluster.local
            port:
              number: 2746
